# tasktree.rs

./: Cargo.toml
cli/: .tasktree.toml  Cargo.toml
cli/src/: args.rs  loader.rs  main.rs  task_edit.rs
core/: Cargo.toml
core/src/: lib.rs
core/tests/: good.toml  lint.rs  past.toml
