[package]
name = "tasktree-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
solvent = "*"
chrono = { version = "*", features = ["serde"] }
anyhow = "*"
thiserror = "*"
no-panic = "*"

[dev-dependencies]
toml = "*"

[lib]
crate-type = ["rlib", "cdylib"]
